timelog/force-app/main/default/objects/Time_Log_Assignment__c/Time_Log_Assignment__c.object-meta.xml
<CustomObject>
    <label>Time Log Assignment</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Log Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>