timelog/force-app/main/default/objects/Time_Log_Assignment__c/fields/Allow_Exceed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Allow_Exceed_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Exceed Hours</label>
    <type>Checkbox</type>
</CustomField>