timelog/force-app/main/default/objects/Time_Log_Assignment__c/fields/Hours_Left__c.field-meta.xml
<CustomField>
    <fullName>Hours_Left__c</fullName>
    <formula>Hours__c -  Reported_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Left</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>