timelog/force-app/main/default/objects/Time_Log_Assignment__c/fields/Reported_Hours__c.field-meta.xml
<CustomField>
    <fullName>Reported_Hours__c</fullName>
    <label>Reported Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>