timelog/force-app/main/default/objects/Time_Log_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Log_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>